# EntropicGarden

./: .clang-format  .doc_read_queue  .documentation_review_completed  .documentation_review_required  .gitattributes  .gitignore  .gitignore.backup  .gitmodules  .last_build_failed  .travis.yml  A Critical Synthesis of a Tri-Layered Neuro-Symbolic Architecture.txt  ACTIVATION_README.md  AI Self-Porting Via Virtual Machine.txt  AI System Design Instructions.txt  AUTONOMOUS_ROADMAP_SYNTHESIS.md  Assessing AI Self-Evolution Feasibility.txt  AutoPrompt.txt  AutoPrompt_backup.txt  AutoPrompt_full_backup.txt  AutoPrompt_old.txt  Autopoietic Flywheel Research Plan.txt  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CYCLE_COMPLETION_WORKFLOW.md  DEVELOPERS.md  Io Morphic UI with WSLg SDL2.txt  Io-Python rRAG Cognitive Pipeline Research.txt  Io_Syntax_and_Best_Practices_Guide.md  LIVE_PERSONA_ACHIEVEMENT_SUMMARY.md  Morphic UI Framework Training Guide Extension.txt  NEURO_SYMBOLIC_IMPLEMENTATION_PLAN.md  Neuro-Symbolic Reasoning Cycle Implementation Plan.txt  PROTOTYPAL_FFI_IMPLEMENTATION_SUMMARY.md  PROTOTYPAL_FFI_MANDATE.md  PROTOTYPAL_NEURAL_BACKEND_SUMMARY.md  PROTOTYPAL_PURITY_AUDIT_REPORT.md  PROTOTYPE_PURITY_ARCHITECTURE.md  Prototypal Emulation Layer Design.txt  README.md  (+155 more)
TelOS_Backup/: CMakeLists.txt
TelOS_Backup/io/: IoTelos.io
TelOS_Backup/source/: IoTelos.c  IoTelos.h
libs/: CMakeLists.txt
libs/Telos/: CMakeLists.txt  README.md  __init__.py  requirements.txt
libs/Telos/io/: BABSWINGLoop.io  ChaosConductor.io  ChaosEngineering.io  CognitiveCycle.io  CompositeEntropySystem.io  Concept.io  DocsTrainingGround.io  EnhancedBABSWINGLoop.io  EvolutionSystem.io  FederatedMemorySystem.io  FractalCognitionEngine.io  FractalCognitionEngine.io.backup2  FractalCognitionEngine_minimal.io  FractalCognitionEngine_test.io  FractalConsciousnessUI.io  FractalPatternDetector.io  GenerativeKernel.io  GenerativeWorldModel.io  GraphIndexer.io  HRCOrchestrator.io  HRCOrchestrator.io.backup  HRCOrchestrator.io.bak2  IoSyntaxChecker.io  IoTelos.io  IoTelos.io.corrupted  IoTelos_backup.io  IoTelos_clean.io  IoTelos_deprecated.io  LLMTransducer.io  MemoryBrowser.io  NeuralBackend.io  NeuroSymbolicOrchestrator.io  OpenTelemetryIo.io  PendingResolution.io  PersonaPrimingSystem.io  Policy.io  PromptTemplate.io  PrototypalLinter.io  PrototypalPatternDetector.io  RigorousFFICookbook.io  (+46 more)
libs/Telos/python/: __init__.py  _telos_bridge.c  bridge_metrics_handlers.py  build_extension.py  build_handlers.py  cache_coordinator.py  compilation_handlers.py  concept_fractal.py  debug_bridge.py  federated_memory.py  federated_memory_handlers.py  graphrag_handlers.py  l1_cache_manager.py  l1_faiss_cache.py  l2_cache_manager.py  laplace_hdc_encoder.py  linting_handlers.py  llm_handlers.py  llm_transducer.py  main.py  neuro_symbolic_handlers.py  neuro_symbolic_reasoner.py  opentelemetry_bridge.py  opentelemetry_handlers.py  performance_benchmark.py  performance_benchmark_handlers.py  process_pool.py  prototypal_bridge.py  prototypal_bridge_analysis.py  prototypal_bridge_cache.py  prototypal_bridge_init.py  prototypal_bridge_manager.py  prototypal_bridge_memory.py  prototypal_bridge_messaging.py  prototypal_bridge_metrics.py  prototypal_bridge_proxy.py  prototypal_bridge_utils.py  prototypal_linter.py  requirements.txt  scalable_vector_handlers.py  (+20 more)
libs/Telos/source/: IoTelos.c  IoTelos.h  IoTelosBridge.c  IoTelosBridge.h  IoTelosBridge_clean.c  IoTelosCore.c  IoTelosCore.h  IoTelosFFI.c  IoTelosFFI.h  IoTelosMorphic.c  IoTelosMorphic.h  IoTelos_deprecated.c  IoTelos_deprecated.h  PrototypalFFI.c  PrototypalFFI.h  TelosProxyObject.c  TelosProxyObject.h  synaptic_bridge.c  synaptic_bridge.c.backup  synaptic_bridge.h  synaptic_bridge_core.c  synaptic_bridge_internal.h  synaptic_bridge_io.c  synaptic_bridge_shared_memory.c  synaptic_bridge_vsa.c  telos_proxy.c  telos_proxy.h  telos_proxy_forwarding.c  telos_proxy_internal.h
libs/Telos/telos/: __init__.py  _telos_bridge.c  build_extension.py  otel_settings.json.in  prototypal_linter.py
libs/Telos/tests/: simple_soar_test.io  simple_test.io  simple_vsa_test.io  test_addon.io  test_addon_debug.io  test_addons_found.io  test_addons_list.io  test_architectural_compliance.io  test_bridge.io  test_bridge_complete.io  test_bridge_core.io  test_bridge_functionality.io  test_bridge_init.io  test_bridge_methods.io  test_bridge_ping.io  test_bridge_simple.io  test_bridge_state.io  test_bridge_status.io  test_bridge_syntax.io  test_build_task.io  test_compiler_init.io  test_delegate_focused.io  test_detailed_init.io  test_direct_bridge.io  test_documentation_review.io  test_dynlib_basic.io  test_dynlib_types.io  test_full_sequence.io  test_graphindexer_l2_integration.io  test_init_error.io  test_iotelos_bridge.io  (+22 more)
libs/TelosUI/: CMakeLists.txt
libs/basekit/: CMakeLists.txt  Makefile.lib
libs/coroutine/: .gitignore  CMakeLists.txt
libs/garbagecollector/: CMakeLists.txt  LICENSE.txt
libs/iovm/: CMakeLists.txt  LICENSE.txt  depends  iovm
libs/tests/: CMakeLists.txt  gauntlet_validation.io  simple_test.io  telos_bridge_metrics_harness.io  telos_bridge_smoke.io  telos_chaos_conductor_harness.io  telos_concept_repository_harness.io  telos_federated_memory_benchmark_harness.io  telos_federated_memory_harness.io  telos_hrc_smoke.io  telos_io_runner.c  telos_l1_cache_harness.io  telos_outbox.fs  telos_outbox.fs.index  telos_outbox_harness.io  telos_zodb_harness.io  telos_zodb_manager_harness.io  test_basic_architecture.py  test_bridge_send_message.c  test_cache_coordinator_failures.py  test_federated_memory_promotions.py  test_forward_message.py  test_l1_cache_manager.py  test_l2_cache_manager.py  test_l2_telemetry.py  test_opentelemetry.py  test_phase1_endtoend.py  test_phase2_federated_memory.py  test_phase4_chaos_validation.py  test_phase4_observability.py  test_phase4_performance.py  test_phase4_stress_testing.py  test_phase4_validation_gauntlet.py  test_shared_memory_lifecycle.c  test_synaptic_bridge.py  test_transactional_outbox.py  test_zodb_manager.py  validation.io
(+3318 files in other folders)
